Bugfix: align center, mismatching

--- a/src/components/Professtion/Simulation/PopUpBtn/ResourcePoolContent/ResourcePoolContent.css
+++ b/src/components/Professtion/Simulation/PopUpBtn/ResourcePoolContent/ResourcePoolContent.css
@@ -92,7 +92,8 @@
     line-height: 37px;
 
     position: relative;
-    left: 20%;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .example-status {
